# chaser-oxide-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-build.sh  docker-compose.yml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: api-design.md  architecture.md  implementation-plan.md  performance-optimization-guide.md
docs/api/: api.md
docs/examples/go/: basic_client.go  generate.sh  stealth_client.go
docs/examples/python/: basic_client.py  browser_pb2.py  browser_pb2_grpc.py  debug_test.py  element_pb2.py  element_pb2_grpc.py  generate.sh  (+9 more)
docs/guides/: contributing.md  deployment.md  development.md  docker.md
docs/implementation/: browser-page.md  cdp.md  profile-stealth.md  summary.md
docs/reports/: acceptance-test.md
examples/google_search_with_proxy/: README.md  config.go  config.py  go.mod  google_search.go  google_search.py  requirements.txt  search_results.csv
protos/: browser.proto  common.proto  element.proto  event.proto  page.proto  profile.proto
src/: config.rs  error.rs  lib.rs  main.rs
src/cdp/: browser.rs  client.rs  connection.rs  mock.rs  mod.rs  tests.rs  traits.rs  types.rs
src/services/: mod.rs  traits.rs
src/session/: browser.rs  element.rs  manager.rs  mock.rs  mod.rs  page.rs  tests.rs  traits.rs
src/stealth/: behavior.rs  engine.rs  fingerprint.rs  injector.rs  mod.rs  tests.rs  traits.rs
tests/: acceptance_test.rs  e2e_test.rs  mock_chrome.rs  performance_acceptance.rs  performance_test.rs
tests/common/: mod.rs
(+60 files in other folders)
