[package]
name = "chaser-oxide"
version = "0.1.0"
edition = "2021"
authors = ["Chaser-Oxide Team"]
description = "Rust-based browser automation microservice using gRPC"
license = "MIT"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"

# WebSocket and HTTP
hyper = "1.0"
hyper-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding/decoding
base64 = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Concurrency
tokio-stream = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.15"
toml = "0.8"

# Stealth engine dependencies
rand = "0.8"
bezier-rs = "0.3"

# Time utilities
chrono = "0.4"

# Bytes utilities
bytes = "1.0"

# Compile-time hash maps
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4"
futures-util = "0.3"
urlencoding = "2.1"

[build-dependencies]
tonic-build = "0.12"

[lib]
name = "chaser_oxide"
path = "src/lib.rs"

[[bin]]
name = "chaser-oxide-server"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
